#Configure MPI
FIND_PACKAGE(MPI REQUIRED)
MESSAGE("STATUS MPI FOUND: ${MPI_CXX_FOUND}")

#Configure HDF5
SET(HDF5_PREFER_PARALLEL true)
FIND_PACKAGE(HDF5 REQUIRED)
MESSAGE(STATUS "Found HDF5: ${HDF5_FOUND}")
MESSAGE(STATUS "HDF5 is parallel: ${HDF5_IS_PARALLEL}")
MESSAGE(STATUS "Prefer parallel: ${HDF5_PREFER_PARALLEL}")

ADD_LIBRARY(h5_wrapper INTERFACE)
TARGET_INCLUDE_DIRECTORIES(h5_wrapper INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
TARGET_INCLUDE_DIRECTORIES(h5_wrapper SYSTEM INTERFACE ${MPI_CXX_INCLUDE_DIRS} ${HDF5_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(h5_wrapper INTERFACE ${MPI_CXX_LIBRARIES} ${HDF5_LIBRARIES})
TARGET_LINK_LIBRARIES(h5_wrapper PRIVATE INTERFACE project_options project_warnings)
